--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>Caleb Brumley</title>
         <link rel="stylesheet" href="CSS/style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM+Serif+Display|Open+Sans">
     </head>
     <body>
         <header class="navigation">
@@ -24,6 +25,73 @@
                 <img src="Images/hs.jpg">
                 <p>Hello world! My name is Caleb Brumley, a UX/UI designer who gets excited by excellent design and emotionally compelling storytelling.</p>
                 <button>Download Resume</button>
+            </div>
+        </section>
+
+        <!-- My UX Skills section coded using CSS Flex -->
+        <section class="mySkills">
+            <h1>My UX Skills</h1>
+            <div class="flexContainer">
+                <div class="flexA">
+                    <img src="Images/qualitative-research.png" width="100px">
+                    <h3>User Research</h3>
+                    <p>User research is the foundation of quality, user-centered design. Understanding the user and their needs is a crucial first-step in any project. 
+                        <br>Tools: User Interviews, User Persona, Surveys 
+                    </p>
+                </div>
+                <div class="flexB">
+                    <img src="Images/handshake.png" width="100px">
+                    <h3>Empathy</h3>
+                    <p>
+                        I design with the end user in mind. This means constantly putting myself in their shoes, embracing their emotional journey as my own.
+                        <br>Tools: Storyboard, User Journey Map, Empathy Diagram
+                    </p>
+                </div>
+                <div class="flexC">
+                    <img src="Images/meeting.png" width="100px">
+                    <h3>Qualitative Interviews</h3>
+                    <p>
+                        My approach to interviewing users is to establish specific goals in order to better understand a users’ pain points, routine, and how ultimately they use the product.
+                    </p>
+                </div>
+            </div>
+        </section>
+<!-- My Work section coded using CSS Grid -->
+        <section class="myWork">
+            <h1>My Work</h1>
+            <div class="workGrid">
+                <div class="doiPic">
+                    <img src="Images/DOI.png" height="300px" width="300px">
+                </div>
+                <div class="doiText">
+                    <h4>Department of the Interior Responsive Redesign</h4>
+                    <p>The redesign of the Dept. of the Interior’s website set 
+                        out to create a more aesthetically appealing, organized, 
+                        enjoyable interface for users on both mobile and desktop.</p>
+                    <button>View Project</button>
+                </div>
+                <div class="divvyPic">
+                    <img src="Images/DivvyUp.png" height="300px" width="300px">
+                </div>
+                <div class="divvyText">
+                    <h4>Divvy Up Mobile App</h4>
+                    <p>Divvy Up is an app that allows household members 
+                        to effectively communicate, organize, and share tasks 
+                        and to-do lists so that everyone can do their fair share.</p>
+                    <button>View Project</button>
+                </div>
+                <div class="morcPic">
+                    <img src="Images/Morc.png" height="300px" width="300px">
+                </div>
+                <div class="morcText">
+                    <h4>Minnesota Off-Road Cyclists Responsive Redesign</h4>
+                    <p>Minnesota Off Road Cyclists is a local non-profit 
+                        focused on facilitating mountain biking in the 
+                        community. This mobile and desktop friendly website 
+                        redesign aimed to entice users into more direct 
+                        involvement.</p>
+                    <button>View Project</button>
+                </div>
             </div>
         </section>
         <footer>
