--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header class="navigation">
             <div class="inline-block logo">
-                <img src="Images/CBlogo.png" width="50px" height="50px">
+                <img src="Images/CBlogo copy.png" width="50px" height="50px">
             </div>
             <nav class="inline-block">
                 <ul>
